# scrive-hackathon

./: README.md  polytope.yml
code/app-api/: pyproject.toml
code/app-api/app/resolvers/: documents.py  hello.py  items.py
code/web-app/public/: index.html
code/web-app/src/components/: Authenticated.tsx  Document.tsx  Documents.tsx
code/web-app/src/graphql/: document.ts  documents.ts
